add swag docs
