# services/auth_service/internal/handlers/register_code_handler.go
@@ -18,11 +18,32 @@ func NewRegistrationCodeHandler(codeService *service.RegistrationCodeService) *R
 	return &RegistrationCodeHandler{codeService: codeService}
 }
 
+// CreateCode создает код доступа для новых пользователей
+//
+//	@Summary		Создать код доступа
+//	@Description	Создает новый код доступа для пользователя
+//	@Description	Создать код могут только администраторы или менеджеры
+//	@Description	Обязательные поля: created_by, role_name	
+//	@Description	Поле  role_name имеет значения: student (group_name становится обязательным), teacher, manager
+//	@Tags			code
+//	@Accept			json
+//	@Produce		json
+//	@Param			code	body		dto.CreateRegistrationCodeRequest	true	"Параметры кода доступа"
+//	@Success		200		{object}	utils.Response{data=dto.RegistrationCodeResponse}
+//	@Failure		400		{object}	utils.Response
+//	@Failure		500		{object}	utils.Response
+//	@Router			/code/create [post]
 func (h *RegistrationCodeHandler) CreateCode(w http.ResponseWriter, r *http.Request) {
 	var req dto.CreateRegistrationCodeRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
 		log.Printf("Failed to decode request: %v", err)
 		utils.ErrorResponse(w, http.StatusBadRequest, "invalid request body")
+		return
+	}
+
+	if err := req.Validate(); err != nil {
+		log.Printf("Failed to validate request: %v", err)
+		utils.ErrorResponse(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
@@ -54,6 +75,20 @@ func (h *RegistrationCodeHandler) CreateCode(w http.ResponseWriter, r *http.Requ
 	utils.SuccessResponse(w, "registration code created", resp)
 }
 
+// RegisterWithCode Зарегистрировать нового или существующего пользователя по коду доступа
+//
+//	@Summary		Зарегистрировать пользователя
+//	@Description	Регистрирует нового или уже существующего пользователя используя код доступа
+//	@Description	Добавляет пользователю роль связанную с кодом
+//	@Description	Если при создании кода указана роль student, то также добавляет пользователя в группу
+//	@Tags			code, users
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		dto.RegisterUserRequest	true	"Параметр пользователя и код"
+//	@Success		200		{object}	utils.Response{data=dto.UserResponse}
+//	@Failure		400		{object}	utils.Response
+//	@Failure		500		{object}	utils.Response
+//	@Router			/users/register [post]
 func (h *RegistrationCodeHandler) RegisterWithCode(w http.ResponseWriter, r *http.Request) {
 	var req dto.RegisterUserRequest
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
